<resources>
    <string name="app_name">Schedule</string>
    <string name="first_position">1</string>
    <string name="second_position">2</string>
    <string name="third_position">3</string>
    <string name="first_title">Monday</string>
    <string name="second_title">Tuesday</string>
    <string name="third_title">Wednesday</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

</resources>
